--- a/manifest.json
+++ b/manifest.json
@@ -10,9 +10,7 @@
     "tabs",
     "debugger"
   ],
-  "host_permissions": [
-    "<all_urls>"
-  ],
+  "host_permissions": [],
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self';",
     "content_scripts": "script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; object-src 'self';"
@@ -24,12 +22,6 @@
   "background": {
     "service_worker": "background.js"
   },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"]
-    }
-  ],
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
