--- a/manifest.json
+++ b/manifest.json
@@ -7,14 +7,21 @@
     "activeTab",
     "scripting",
     "downloads",
-    "tabs",
     "debugger"
   ],
-  "host_permissions": [],
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self';",
-    "content_scripts": "script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; object-src 'self';"
+    "extension_pages": "script-src 'self'; object-src 'self';"
   },
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "libs/html2canvas.min.js"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
+    }
+  ],
   "action": {
     "default_popup": "popup.html",
     "default_title": "Web Helper"
